# CPP-VSCODE-TEMPLATE

./: CMakeLists.txt  README.md  build.sh  cmake_build.sh
